--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -3,7 +3,7 @@
         <!-- 
         Summary of the last 7 days
         -->
-        <div class="col-12">
+        <div class="col-12 d-none d-md-block">
             <table class="table table-dark table-vertical">
                 <thead>
                     <tr>
