--- a/src/app/overview-channel/overview-channel.component.html
+++ b/src/app/overview-channel/overview-channel.component.html
@@ -1,6 +1,6 @@
 <div class="container mb-3" *ngIf="ls.lastRecords.length > 0">
     <div class="row">
-        <div class="col-6">
+        <div class="col-12 col-md-6">
             <!-- 
                 Table with the records of today
             -->
@@ -57,15 +57,16 @@
                 </tbody>
             </table>
         </div>
-        <div class="col-6">
+        <div class="col-12 col-md-6">
             <!-- 
                 Table with the results of all players
             -->
-            <h2>Resultaat</h2>
             <table class="table table-dark">
                 <thead>
                     <tr class="border-start-0">
-                        <th scope="col" class="border-start-0"></th>
+                        <th scope="col" class="border-start-0">
+                            <h2>Resultaat</h2>
+                        </th>
                         <th scope="col">Vandaag</th>
                         <th scope="col">30 dagen</th>
                         <th scope="col">Totaal</th>
@@ -110,7 +111,7 @@
             List of players their last records
         -->
         <ng-container *ngFor="let lastUserRecords of ls.lastRecords">
-            <div class="col-6">
+            <div class="col-12 col-xl-6">
                 <ng-container *ngIf="lastUserRecords.length > 0">
                     <div class="card">
                         <div class="card-body">
@@ -132,13 +133,13 @@
                                             <td>
                                                 {{ ls.getUserCasinoName(record.casinoId ?? '') }}
                                             </td>
-                                            <td>
+                                            <td class="d-none d-md-table-cell">
                                                 {{ ls.getUserTypeName(record.recordTypeId ?? '') }}
                                             </td>
-                                            <td class="text-center">
+                                            <td class="d-none d-sm-table-cell text-center">
                                                 {{ record.deposit | currency:'EUR':'symbol':'1.2-2' }}
                                             </td>
-                                            <td class="text-center">
+                                            <td class="d-none d-sm-table-cell text-center">
                                                 {{ record.withdrawal | currency:'EUR':'symbol':'1.2-2' }}
                                             </td>
                                             <td>
@@ -150,7 +151,8 @@
                                                     currency:'EUR':'symbol':'1.2-2' }}
                                                 </span>
                                             </td>
-                                            <td class="text-center">
+                                            <td class="d-none d-md-table-cell text-center">
+                                                &nbsp;
                                                 <ng-container *ngIf="record.notes.length > 0">
                                                     <fa-icon [icon]="faCoffee"></fa-icon>
                                                 </ng-container>
