--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -154,10 +154,10 @@
                                 <td>
                                     {{ ls.getUserTypeName(record.recordTypeId ?? '') }}
                                 </td>
-                                <td class="text-center">
+                                <td class="d-none d-lg-table-cell text-center">
                                     {{ record.deposit | currency:'EUR':'symbol':'1.2-2' }}
                                 </td>
-                                <td class="text-center">
+                                <td class="d-none d-lg-table-cell text-center">
                                     {{ record.withdrawal | currency:'EUR':'symbol':'1.2-2' }}
                                 </td>
                                 <td class="text-center">
