--- a/src/app/overview-channel/overview-channel.component.html
+++ b/src/app/overview-channel/overview-channel.component.html
@@ -29,7 +29,7 @@
                             </p>
                         </td>
                         <td>
-                            {{ ls.getUserCasinoName(record.casinoId ?? '') }}
+                            {{ ls.getCasinoName(record.casinoId ?? '') }}
                         </td>
                         <td>
                             {{ ls.getUserTypeName(record.recordTypeId ?? '') }}
@@ -131,7 +131,7 @@
                                                 </p>
                                             </td>
                                             <td>
-                                                {{ ls.getUserCasinoName(record.casinoId ?? '') }}
+                                                {{ ls.getCasinoName(record.casinoId ?? '') }}
                                             </td>
                                             <td class="d-none d-md-table-cell">
                                                 {{ ls.getUserTypeName(record.recordTypeId ?? '') }}
