--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,10 @@
       <a class="nav-link" routerLink="profile/{{ ls.getUserId() }}">Profiel</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" routerLink="manage">Manage</a>
+      <a class="nav-link" routerLink="manage">Manage records</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="settings">Settings</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" (click)="logout()" role="button">Logout</a>
