--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -36,12 +36,12 @@
                     </div>
 
                     <div class="col-12 col-md-6 col-lg-4">
-                        <app-select label="Casino" [options]="lse.casinosToKeyValue(ls.userCasinos)"
+                        <app-select label="Casino" [options]="lse.casinosToKeyValue(ls.getUserCasinos())"
                             placeholder="Selecteer casino" formControlName="casino"></app-select>
                     </div>
 
                     <div class="col-12 col-md-6 col-lg-4">
-                        <app-select label="Type" [options]="lse.recordtypesToKeyValue(ls.userRecordTypes)"
+                        <app-select label="Type" [options]="lse.recordtypesToKeyValue(ls.getUserTypes())"
                             placeholder="Selecteer type" formControlName="recordType"></app-select>
                     </div>
 
