--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -170,7 +170,7 @@
                                 </td>
                                 <td class="text-center">
                                     <ng-container *ngIf="record.notes.length > 0">
-                                        <fa-icon [icon]="faCoffee"></fa-icon>
+                                        <fa-icon [icon]="faComment"></fa-icon>
                                     </ng-container>
                                 </td>
                             </tr>
