--- a/src/app/overview-channel/overview-channel.component.html
+++ b/src/app/overview-channel/overview-channel.component.html
@@ -1,112 +1,5 @@
 <div class="container mb-3" *ngIf="ls.lastRecords.length > 0">
     <div class="row">
-        <div class="col-12 col-md-6">
-            <!-- 
-                Table with the records of today
-            -->
-            <h2>{{ header }}</h2>
-            <p *ngIf="ls.recordsToday.length == 0">Nog geen records vandaag.</p>
-            <table class="table table-dark" *ngIf="ls.recordsToday.length > 0">
-                <thead>
-                    <tr>
-                        <th scope="col"></th>
-                        <th scope="col">Casino</th>
-                        <th scope="col">Type</th>
-                        <th scope="col" class="text-center">Storting</th>
-                        <th scope="col" class="text-center">Opname</th>
-                        <th scope="col" class="text-center">Netto</th>
-                        <th scope="col"></th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngFor="let record of ls.recordsToday">
-                        <td class="fw-bold">
-                            <span [routerLink]="['/profile', record.userId]" role="button">
-                                {{ ls.getUserConnectionName(record.userId ?? '') }}
-                            </span>
-                            <p class="record-comment" *ngIf="record.notes.length > 0">
-                                {{ record.notes }}
-                            </p>
-                        </td>
-                        <td>
-                            {{ ls.getCasinoName(record.casinoId ?? '') }}
-                        </td>
-                        <td>
-                            {{ ls.getUserTypeName(record.recordTypeId ?? '') }}
-                        </td>
-                        <td class="text-center">
-                            {{ record.deposit | currency:'EUR':'symbol':'1.2-2' }}
-                        </td>
-                        <td class="text-center">
-                            {{ record.withdrawal | currency:'EUR':'symbol':'1.2-2' }}
-                        </td>
-                        <td class="text-center">
-                            <span [ngClass]="{
-                                            'text-success': record.withdrawal > record.deposit,
-                                            'text-danger': record.withdrawal < record.deposit
-                                        }">
-                                {{ (record.withdrawal - record.deposit) | currency:'EUR':'symbol':'1.2-2' }}
-                            </span>
-                        </td>
-                        <td class="text-center">
-                            <ng-container *ngIf="record.notes.length > 0">
-                                <fa-icon [icon]="faCoffee"></fa-icon>
-                            </ng-container>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-        <div class="col-12 col-md-6">
-            <!-- 
-                Table with the results of all players
-            -->
-            <table class="table table-dark">
-                <thead>
-                    <tr class="border-start-0">
-                        <th scope="col" class="border-start-0">
-                            <h2>Resultaat</h2>
-                        </th>
-                        <th scope="col">Vandaag</th>
-                        <th scope="col">30 dagen</th>
-                        <th scope="col">Totaal</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngFor="let result of ls.sharedNettoResults">
-                        <td class="fw-bold">
-                            <span [routerLink]="['/profile', result.userId]" role="button">
-                                {{ ls.getUserConnectionName(result.userId) }}
-                            </span>
-                        </td>
-                        <td [ngClass]="{
-                            'text-success': result.today > 0,
-                            'text-danger': result.today < 0
-                        
-                        }">
-                            {{ result.today | currency:'EUR':'symbol':'1.2-2' }}
-                        </td>
-                        <td [ngClass]="{
-                            'text-success': result.last30Days > 0,
-                            'text-danger': result.last30Days < 0
-                        
-                        }">
-                            {{ result.last30Days | currency:'EUR':'symbol':'1.2-2' }}
-                        </td>
-                        <td [ngClass]="{
-                            'text-success': result.alltime > 0,
-                            'text-danger': result.alltime < 0
-                        
-                        }">
-                            {{ result.alltime | currency:'EUR':'symbol':'1.2-2' }}
-                        </td>
-                    </tr>
-
-                </tbody>
-            </table>
-        </div>
-
-
         <!-- 
             List of players their last records
         -->
@@ -154,7 +47,7 @@
                                             <td class="d-none d-md-table-cell text-center">
                                                 &nbsp;
                                                 <ng-container *ngIf="record.notes.length > 0">
-                                                    <fa-icon [icon]="faCoffee"></fa-icon>
+                                                    <fa-icon [icon]="faComment"></fa-icon>
                                                 </ng-container>
                                             </td>
                                         </tr>
