--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
       <div class="nav-link active">Ingelogd als: {{ ls.getUserConnectionName(ls.getUserId()) }}</div>
     </li>
     <li class="nav-item">
-      <a class="nav-link" routerLink="">Aanmaken</a>
+      <a class="nav-link" routerLink="">Nieuwe record</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" routerLink="channel/overview">Overzicht</a>
