--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -29,7 +29,7 @@
             Create a new record
         -->
         <div class="col-12">
-            <h2>Create record</h2>
+            <h2>Record aanmaken</h2>
             <form [formGroup]="form" *ngIf="form">
                 <div class="row">
                     <div class="col-12 col-lg-4">
